Error codes added
