# controllers/Organization.js
@@ -4,8 +4,8 @@ var url = require('url');
 
 var Organization = require('./OrganizationService');
 
-module.exports.get = function get (req, res, next) {
-  Organization.get(req.swagger.params, res, next);
+module.exports.getSnapshot = function getSnapshot (req, res, next) {
+  Organization.getSnapshot(req.swagger.params, res, next);
 };
 
 module.exports.getDepartments = function getDepartments (req, res, next) {
